[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/tile.gd" type="Script" id=1]
[ext_resource path="res://assets/1.jpeg" type="Texture" id=2]
[ext_resource path="res://assets/image.png (1).jpeg" type="Texture" id=3]
[ext_resource path="res://assets/image.png (4).jpeg" type="Texture" id=4]
[ext_resource path="res://assets/image.png (3).jpeg" type="Texture" id=5]
[ext_resource path="res://assets/image.png (6).jpeg" type="Texture" id=6]
[ext_resource path="res://assets/image.png (7).jpeg" type="Texture" id=7]
[ext_resource path="res://assets/image.png.jpeg" type="Texture" id=8]
[ext_resource path="res://assets/image.png (2).jpeg" type="Texture" id=9]
[ext_resource path="res://assets/image.png (8).jpeg" type="Texture" id=10]
[ext_resource path="res://assets/sync.png" type="Texture" id=11]
[ext_resource path="res://assets/add.png" type="Texture" id=12]
[ext_resource path="res://src/main.gd" type="Script" id=13]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.652344, 0.480122, 0.155441, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.258824, 0.678431, 0.960784, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.952941, 0.713726, 0.262745, 1 )

[node name="tile_manager" type="Node2D"]
script = ExtResource( 13 )

[node name="tile9" type="Sprite" parent="."]
position = Vector2( 915, 290 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
script = ExtResource( 1 )

[node name="tile8" type="Sprite" parent="."]
position = Vector2( 915, 289 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
script = ExtResource( 1 )

[node name="tile7" type="Sprite" parent="."]
position = Vector2( 912, 294 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
script = ExtResource( 1 )

[node name="tile6" type="Sprite" parent="."]
position = Vector2( 911, 290 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
script = ExtResource( 1 )

[node name="tile5" type="Sprite" parent="."]
position = Vector2( 910, 294 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
script = ExtResource( 1 )

[node name="tile4" type="Sprite" parent="."]
position = Vector2( 914, 290 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
script = ExtResource( 1 )

[node name="tile3" type="Sprite" parent="."]
position = Vector2( 911, 290 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
script = ExtResource( 1 )

[node name="tile2" type="Sprite" parent="."]
position = Vector2( 912, 292 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
script = ExtResource( 1 )

[node name="tile1" type="Sprite" parent="."]
position = Vector2( 491, 329 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="add" type="Button" parent="."]
margin_left = 491.0
margin_top = 669.0
margin_right = 644.0
margin_bottom = 740.0
rect_pivot_offset = Vector2( 71, 47 )
size_flags_horizontal = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 12 )
icon_align = 1

[node name="rotate" type="Button" parent="."]
margin_left = 324.0
margin_top = 670.0
margin_right = 474.0
margin_bottom = 739.0
rect_pivot_offset = Vector2( 71, 47 )
size_flags_horizontal = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 11 )
icon_align = 1

[connection signal="pressed" from="add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="rotate" to="." method="_on_rotate_pressed"]
